--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI - Build & Firebase Test
 
 on:
   push:
-    branches: [dev]
+    branches:
+      -main
+      -dev
   pull_request:
-    branches: [dev]
+    branches:
+      -main
+      -dev
 
 jobs:
   build:
