--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dom-to-image": "^2.6.0",
     "ethers": "^6.15.0",
     "firebase": "^11.10.0",
     "qrcode.react": "^4.2.0",
