--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,13 @@
 name: CI - Build & Firebase Test
 
-on:
-  push:
-    branches: [dev]
+push:
+    branches:
+      -main
+      -dev
   pull_request:
-    branches: [dev]
+    branches:
+      -main
+      -dev
 
 jobs:
   build:
